# tauri-video-processing

src-tauri/src/: main.rs  video_processor.rs  whisper.rs
video-processor/: README.md  package-lock.json  package.json
video-processor/src/: App.css  App.tsx  types.ts
video-processor/src-tauri/: Cargo.toml  tauri.conf.json
video-processor/src-tauri/capabilities/: default.json
video-processor/src-tauri/src/: error.rs  main.rs  video_processor.rs  whisper.rs
video-processor/src/components/: ProcessingOptions.tsx  ProgressBar.tsx  TranscriptViewer.tsx  VideoPreview.tsx  VideoUploader.tsx
